完成了路由机制

--- a/src/deck/drivers/src/swarm-ranging-protocol/.vscode/settings.json
+++ b/src/deck/drivers/src/swarm-ranging-protocol/.vscode/settings.json
@@ -25,6 +25,9 @@
         "lpstwrtag.h": "c",
         "stm32fxxx.h": "c",
         "stm32f4xx.h": "c",
-        "floodingalgo.h": "c"
+        "floodingalgo.h": "c",
+        "stdint.h": "c",
+        "stddef.h": "c",
+        "stdlib.h": "c"
     }
 }
