--- a/src/modules/src/Kbuild
+++ b/src/modules/src/Kbuild
@@ -17,6 +17,7 @@ obj-y += crtp_commander.o
 obj-y += crtp_commander_rpyt.o
 obj-y += crtp_localization_service.o
 obj-y += crtp.o
+obj-y += testcrtp.o
 obj-y += crtpservice.o
 obj-y += esp_deck_flasher.o
 obj-y += estimator_complementary.o
