--- a/src/deck/drivers/src/Kbuild
+++ b/src/deck/drivers/src/Kbuild
@@ -19,3 +19,5 @@ obj-$(CONFIG_DECK_USD)           += usddeck.o
 obj-$(CONFIG_DECK_ZRANGER)       += zranger.o
 obj-$(CONFIG_DECK_ZRANGER2)      += zranger2.o
 obj-$(CONFIG_DECK_ADHOC)         += adhocdeck.o
+obj-$(CONFIG_DECK_ADHOC)         += ranging_struct.o
+obj-$(CONFIG_DECK_ADHOC)         += swarm_ranging.o
