--- a/src/deck/drivers/src/Kbuild
+++ b/src/deck/drivers/src/Kbuild
@@ -23,3 +23,4 @@ obj-$(CONFIG_DECK_ADHOC)         += ranging_struct.o
 obj-$(CONFIG_DECK_ADHOC)         += swarm_ranging.o
 obj-$(CONFIG_DECK_ADHOC)         += routing.o
 obj-$(CONFIG_DECK_ADHOC)         += flooding.o
+obj-$(CONFIG_DECK_ADHOC)         += hello.o
