--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,23 @@
     },
     "files.associations": {
         "bootloader.h": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "__locale": "c",
+        "atomic": "c",
+        "bit": "c",
+        "codecvt": "c",
+        "compare": "c",
+        "cstddef": "c",
+        "filesystem": "c",
+        "ios": "c",
+        "limits": "c",
+        "locale": "c",
+        "new": "c",
+        "string": "c",
+        "type_traits": "c",
+        "variant": "c",
+        "random": "c",
+        "math.h": "c",
+        "string.h": "c"
     }
 }
