--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,46 @@
         "variant": "c",
         "random": "c",
         "math.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "dwtypes.h": "c",
+        "adhocdeck.h": "c",
+        "semphr.h": "c",
+        "libdw3000.h": "c",
+        "mac_802_15_4.h": "c",
+        "queue.h": "c",
+        "freertos.h": "c",
+        "task.h": "c",
+        "system.h": "c",
+        "autoconf.h": "c",
+        "debug.h": "c",
+        "log.h": "c",
+        "swarm_ranging.h": "c",
+        "routing.h": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "array": "c",
+        "bitset": "c",
+        "deque": "c",
+        "initializer_list": "c",
+        "queue": "c",
+        "stack": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "__string": "c",
+        "olsr.h": "c",
+        "chrono": "c",
+        "timers.h": "c",
+        "static_mem.h": "c",
+        "deck.h": "c",
+        "stdint.h": "c",
+        "stm32fxxx.h": "c",
+        "raft.h": "c",
+        "relative_localization.h": "c",
+        "arm_math.h": "c",
+        "param.h": "c",
+        "radiolink.h": "c",
+        "commander.h": "c",
+        "uart2.h": "c",
+        "configblock.h": "c"
     }
 }
