--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,68 +1,113 @@
 {
-    "search.exclude": {
-        "**/generated": true,
-        "**/node_modules": true,
-        "**/bower_components": true
-    },
-    "files.associations": {
-        "bootloader.h": "c",
-        "iterator": "c",
-        "__locale": "c",
-        "atomic": "c",
-        "bit": "c",
-        "codecvt": "c",
-        "compare": "c",
-        "cstddef": "c",
-        "filesystem": "c",
-        "ios": "c",
-        "limits": "c",
-        "locale": "c",
-        "new": "c",
-        "string": "c",
-        "type_traits": "c",
-        "variant": "c",
-        "random": "c",
-        "math.h": "c",
-        "string.h": "c",
-        "dwtypes.h": "c",
-        "adhocdeck.h": "c",
-        "semphr.h": "c",
-        "libdw3000.h": "c",
-        "mac_802_15_4.h": "c",
-        "queue.h": "c",
-        "freertos.h": "c",
-        "task.h": "c",
-        "system.h": "c",
-        "autoconf.h": "c",
-        "debug.h": "c",
-        "log.h": "c",
-        "swarm_ranging.h": "c",
-        "routing.h": "c",
-        "__hash_table": "c",
-        "__split_buffer": "c",
-        "array": "c",
-        "bitset": "c",
-        "deque": "c",
-        "initializer_list": "c",
-        "queue": "c",
-        "stack": "c",
-        "unordered_map": "c",
-        "vector": "c",
-        "__string": "c",
-        "olsr.h": "c",
-        "chrono": "c",
-        "timers.h": "c",
-        "static_mem.h": "c",
-        "deck.h": "c",
-        "stdint.h": "c",
-        "stm32fxxx.h": "c",
-        "raft.h": "c",
-        "relative_localization.h": "c",
-        "arm_math.h": "c",
-        "param.h": "c",
-        "radiolink.h": "c",
-        "commander.h": "c",
-        "uart2.h": "c",
-        "configblock.h": "c"
-    }
+  "search.exclude": {
+    "**/generated": true,
+    "**/node_modules": true,
+    "**/bower_components": true
+  },
+  "files.associations": {
+    "bootloader.h": "c",
+    "iterator": "c",
+    "__locale": "c",
+    "atomic": "c",
+    "bit": "c",
+    "codecvt": "c",
+    "compare": "c",
+    "cstddef": "c",
+    "filesystem": "c",
+    "ios": "c",
+    "limits": "c",
+    "locale": "c",
+    "new": "c",
+    "string": "c",
+    "type_traits": "c",
+    "variant": "c",
+    "random": "c",
+    "math.h": "c",
+    "string.h": "c",
+    "dwtypes.h": "c",
+    "adhocdeck.h": "c",
+    "semphr.h": "c",
+    "libdw3000.h": "c",
+    "mac_802_15_4.h": "c",
+    "queue.h": "c",
+    "freertos.h": "c",
+    "task.h": "c",
+    "system.h": "c",
+    "autoconf.h": "c",
+    "debug.h": "c",
+    "log.h": "c",
+    "swarm_ranging.h": "c",
+    "routing.h": "c",
+    "__hash_table": "c",
+    "__split_buffer": "c",
+    "array": "c",
+    "bitset": "c",
+    "deque": "c",
+    "initializer_list": "c",
+    "queue": "c",
+    "stack": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "__string": "c",
+    "olsr.h": "c",
+    "chrono": "c",
+    "timers.h": "c",
+    "static_mem.h": "c",
+    "deck.h": "c",
+    "stdint.h": "c",
+    "stm32fxxx.h": "c",
+    "raft.h": "c",
+    "relative_localization.h": "c",
+    "arm_math.h": "c",
+    "param.h": "c",
+    "radiolink.h": "c",
+    "commander.h": "c",
+    "uart2.h": "c",
+    "configblock.h": "c",
+    "__node_handle": "c",
+    "string_view": "c",
+    "__bit_reference": "c",
+    "complex": "c",
+    "relative_control.h": "c",
+    "optional": "c",
+    "__mutex_base": "c",
+    "condition_variable": "c",
+    "typeinfo": "c",
+    "estimator_kalman.h": "c"
+  },
+  "C_Cpp_Runner.cCompilerPath": "clang",
+  "C_Cpp_Runner.cppCompilerPath": "clang++",
+  "C_Cpp_Runner.debuggerPath": "lldb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wconversion",
+    "-Wnull-dereference",
+    "-Wsign-conversion"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false
 }
