--- a/src/deck/drivers/src/Kbuild
+++ b/src/deck/drivers/src/Kbuild
@@ -27,3 +27,4 @@ obj-$(CONFIG_DECK_ADHOC)         += olsr.o
 obj-$(CONFIG_DECK_ADHOC)         += raft.o
 obj-$(CONFIG_DECK_ADHOC)         += flooding_struct.o
 obj-$(CONFIG_DECK_ADHOC)         += flooding.o
+obj-$(CONFIG_DECK_ADHOC)         += formation.o
